Cumulative Layout Shift fix

--- a/src/components/Photo/Photo.scss
+++ b/src/components/Photo/Photo.scss
@@ -1,5 +1,6 @@
 .photo {
   width: 25%;
+  aspect-ratio: 1/1;
   align-self: center;
   border-radius: 50%;
 }
